# nimue

./: Cargo.toml  README.md
.github/workflows/: docs.yml  lint-fmt.yml
spongefish/: Cargo.toml
spongefish-anemoi/: Cargo.toml
spongefish-anemoi/src/: lib.rs
spongefish-poseidon/: Cargo.toml
spongefish-poseidon/examples/: schnorr_algebraic_hash.rs
spongefish-poseidon/src/: bls12_381.rs  bn254.rs  f64.rs  lib.rs  tests.rs
spongefish-pow/: Cargo.toml
spongefish-pow/src/: blake3.rs  keccak.rs  lib.rs
spongefish/examples/: bulletproof.rs  schnorr.rs
spongefish/src/: domain_separator.rs  errors.rs  keccak.rs  lib.rs  prover.rs  sho.rs  tests.rs  traits.rs  verifier.rs
spongefish/src/codecs/: mod.rs  tests.rs  traits.rs
spongefish/src/codecs/arkworks_algebra/: deserialize.rs  domain_separator.rs  mod.rs  prover_messages.rs  tests.rs  verifier_messages.rs
spongefish/src/codecs/zkcrypto_group/: deserialize.rs  domain_separator.rs  mod.rs  prover_messages.rs  verifier_messages.rs
spongefish/src/duplex_sponge/: legacy.rs  mod.rs  tests.rs
